remove z-index of -1 from map. Arrow now shows w/o it (??) and it was preventing info window from popping up!

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ body {
   left: 0px;
   bottom: 0px;
   right: 0px;
-  z-index: -1;
 }
 
 header {
